[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unphock"
version = "0.0.0"
authors = [
    { name = "Nicolas Mokus", email = "nmks@tuta.io" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
